<resources>
    <string name="app_name">My Application</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="empty"> </string>
    <string name="mix">Перемешать блоки</string>
</resources>