<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="336dp"
        android:layout_marginBottom="190dp"
        android:gravity="center"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewScore">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/my_buutom_style"
                android:onClick="onClickBlock"
                android:text="@string/num1"

                android:textColor="@color/white"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/nonActiveBlock"
                android:onClick="onClickBlock"
                android:text="@string/num2"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/nonActiveBlock"
                android:onClick="onClickBlock"
                android:text="@string/num3"
                android:textColor="@color/white"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/nonActiveBlock"
                android:onClick="onClickBlock"
                android:text="@string/num4"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/nonActiveBlock"
                android:onClick="onClickBlock"
                android:text="@string/num5"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/nonActiveBlock"
                android:onClick="onClickBlock"
                android:text="@string/num6"
                android:textColor="@color/white"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/nonActiveBlock"
                android:onClick="onClickBlock"
                android:text="@string/num7"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/nonActiveBlock"
                android:onClick="onClickBlock"
                android:text="@string/num8"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/activeBlock"
                android:onClick="onClickBlock"
                android:text="@string/empty"
                android:textColor="@color/white"/>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button_mix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="125dp"
        android:onClick="onClickMix"
        android:text="@string/mix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="96dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:fontFamily="sans-serif-black"
        android:text="score: 0"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>